commit automat